Add filter labels to multiple choice filters
- These just duplicate the existing labels for the time being

--- a/service/security/asset-protection-and-resilience.yml
+++ b/service/security/asset-protection-and-resilience.yml
@@ -8,14 +8,19 @@ Asset protection and resilience:
     fields:
       - type: checkbox
         label: "UK"
+        filterLabel: "UK"
       - type: checkbox
         label: "EU"
+        filterLabel: "EU"
       - type: checkbox
         label: "USA - Safe Harbor"
+        filterLabel: "USA - Safe Harbor"
       - type: checkbox
         label: "Other countries with data protection treaties"
+        filterLabel: "Other countries with data protection treaties"
       - type: checkbox
         label: "Rest of world"
+        filterLabel: "Rest of world"
     validationNotAnswered: "This question requires an answer."
   "Data management location":
     requirements: The geographic location(s) where consumer data is stored, processed or managed from (to country level)
@@ -26,14 +31,19 @@ Asset protection and resilience:
     fields:
       - type: checkbox
         label: "UK"
+        filterLabel: "UK"
       - type: checkbox
         label: "EU"
+        filterLabel: "EU"
       - type: checkbox
         label: "USA - Safe Harbor"
+        filterLabel: "USA - Safe Harbor"
       - type: checkbox
         label: "Other countries with data protection treaties"
+        filterLabel: "Other countries with data protection treaties"
       - type: checkbox
         label: "Rest of world"
+        filterLabel: "Rest of world"
     validationNotAnswered: "This question requires an answer."
   "Legal jurisdiction of service provider":
     requirements: The legal jurisdiction(s) in which the service provider operates
@@ -44,14 +54,19 @@ Asset protection and resilience:
     fields:
       - type: radio
         label: "UK"
+        filterLabel: "UK"
       - type: radio
         label: "EU"
+        filterLabel: "EU"
       - type: radio
         label: "USA - Safe Harbor"
+        filterLabel: "USA - Safe Harbor"
       - type: radio
         label: "Other countries with data protection treaties"
+        filterLabel: "Other countries with data protection treaties"
       - type: radio
         label: "Rest of world"
+        filterLabel: "Rest of world"
     validationNotAnswered: "This question requires an answer."
   "Datacentre protection":
     requirements: Consumers should be confident that the physical security measures employed by the provider are sufficient for their intended use of the service.
@@ -71,16 +86,22 @@ Asset protection and resilience:
     fields:
       - type: radio
         label: "CPA Foundation-grade assured components"
+        filterLabel: "CPA Foundation-grade assured components"
       - type: radio
         label: "FIPS-assured encryption"
+        filterLabel: "FIPS-assured encryption"
       - type: radio
         label: "Other encryption"
+        filterLabel: "Other encryption"
       - type: radio
         label: "Secure containers, racks or cages"
+        filterLabel: "Secure containers, racks or cages"
       - type: radio
         label: "Physical access control"
+        filterLabel: "Physical access control"
       - type: radio
         label: "No protection"
+        filterLabel: "No protection"
     validationNotAnswered: "This question requires an answer."
   "Secure data deletion":
     requirements: Consumers should be sufficiently confident that their data is erased when resources are moved or re-provisioned, when they leave the service or when they request it to be erased.
@@ -91,12 +112,16 @@ Asset protection and resilience:
     fields:
       - type: radio
         label: "CPA Foundation-grade erasure product"
+        filterLabel: "CPA Foundation-grade erasure product"
       - type: radio
         label: "CESG or CPNI-approved erasure process"
+        filterLabel: "CESG or CPNI-approved erasure process"
       - type: radio
         label: "Other secure erasure process"
+        filterLabel: "Other secure erasure process"
       - type: radio
         label: "Other erasure process"
+        filterLabel: "Other erasure process"
     validationNotAnswered: "This question requires an answer."
   "Storage media disposal":
     requirements: Consumers should be sufficiently confident that storage media which has held consumer data is sanitised or securely destroyed at the end of its life
@@ -107,18 +132,25 @@ Asset protection and resilience:
     fields:
       - type: radio
         label: "CESG-assured destruction service (CAS(T))"
+        filterLabel: "CESG-assured destruction service (CAS(T))"
       - type: radio
         label: "CPA Foundation-assured product"
+        filterLabel: "CPA Foundation-assured product"
       - type: radio
         label: "CPNI-approved destruction service"
+        filterLabel: "CPNI-approved destruction service"
       - type: radio
         label: "BS EN 151713:2009-compliant destruction"
+        filterLabel: "BS EN 151713:2009-compliant destruction"
       - type: radio
         label: "CESG or CPNI-approved erasure process"
+        filterLabel: "CESG or CPNI-approved erasure process"
       - type: radio
         label: "Other secure erasure process"
+        filterLabel: "Other secure erasure process"
       - type: radio
         label: "Other destruction/erasure process"
+        filterLabel: "Other destruction/erasure process"
     validationNotAnswered: "This question requires an answer."
   "Secure equipment disposal":
     requirements: Consumers should be sufficiently confident that all equipment potentially containing consumer data, credentials, or configuration information for the service is identified at the end of its life (or prior to being recycled).
