--- a/service/support.yml
+++ b/service/support.yml
@@ -5,14 +5,19 @@ Support:
     fields:
       - type: checkbox
         label: Service desk
+        filterLabel: Service desk
       - type: checkbox
         label: Email
+        filterLabel: Email
       - type: checkbox
         label: Phone
+        filterLabel: Phone
       - type: checkbox
         label: Live chat
+        filterLabel: Live chat
       - type: checkbox
         label: Onsite
+        filterLabel: Onsite
     validationNotAnswered: "This question requires an answer."
   Support accessible to any third-party suppliers:
     dependsOnLots: SaaS, PaaS, IaaS, SCS
