--- a/service/security/audit-information-provision-to-consumers.yml
+++ b/service/security/audit-information-provision-to-consumers.yml
@@ -8,8 +8,11 @@ Audit information provision to consumers:
     fields:
       - type: radio
         label: "None"
+        filterLabel: "None"
       - type: radio
         label: "Data made available"
+        filterLabel: "Data made available"
       - type: radio
         label: "Data made available by negotiation"
+        filterLabel: "Data made available by negotiation"
     validationNotAnswered: "This question requires an answer."
