--- a/service/security/secure-service-administration.yml
+++ b/service/security/secure-service-administration.yml
@@ -8,12 +8,17 @@ Secure service administration:
     fields:
       - type: radio
         label: "Dedicated devices on a segregated network"
+        filterLabel: "Dedicated devices on a segregated network"
       - type: radio
         label: "Dedicated devices for community service management"
+        filterLabel: "Dedicated devices for community service management"
       - type: radio
         label: "Dedicated devices for multiple community service management"
+        filterLabel: "Dedicated devices for multiple community service management"
       - type: radio
         label: "Service management via bastion hosts"
+        filterLabel: "Service management via bastion hosts"
       - type: radio
         label: "Direct service management"
+        filterLabel: "Direct service management"
     validationNotAnswered: "This question requires an answer."
