--- a/service/service-type-SCS.yml
+++ b/service/service-type-SCS.yml
@@ -6,12 +6,17 @@ Service type:
     fields:
       - type: checkbox
         label: Implementation
+        filterLabel: Implementation
       - type: checkbox
         label: Ongoing support
+        filterLabel: Ongoing support
       - type: checkbox
         label: Planning
+        filterLabel: Planning
       - type: checkbox
         label: Testing
+        filterLabel: Testing
       - type: checkbox
         label: Training
+        filterLabel: Training
     validationNotAnswered: "This question requires an answer."
