Add filter labels to boolean filters
- These just duplicate the questions for the time being

--- a/service/access.yml
+++ b/service/access.yml
@@ -35,6 +35,7 @@ Access:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
+        filterLabel: Offline working and syncing supported
     validationNotAnswered: "This question requires an answer."
   Supported devices:
     dependsOnLots: SaaS, PaaS, IaaS
