--- a/service/analytics.yml
+++ b/service/analytics.yml
@@ -3,4 +3,5 @@ Analytics:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
+        filterLabel: Real-time management information available
     validationNotAnswered: "This question requires an answer."
