--- a/service/open-source.yml
+++ b/service/open-source.yml
@@ -3,4 +3,5 @@ Open source:
     dependsOnLots: SaaS, PaaS, IaaS
     fields:
       - type: boolean
+        filterLabel: Open-source software used and supported
     validationNotAnswered: "This question requires an answer."
