--- a/service/security/secure-development.yml
+++ b/service/security/secure-development.yml
@@ -7,6 +7,7 @@ Secure development:
     assuranceApproach: 2answers-type1
     fields:
       - type: boolean
+        filterLabel: Secure development
     validationNotAnswered: "This question requires an answer."
   "Secure design, coding, testing and deployment":
     requirements: Consumers should be sufficiently confident that development is carried out in line with industry good practice regarding secure design, coding, testing and deployment.
@@ -16,6 +17,7 @@ Secure development:
     assuranceApproach: 2answers-type1
     fields:
       - type: boolean
+        filterLabel: Secure design, coding, testing and deployment
     validationNotAnswered: "This question requires an answer."
   "Software configuration management":
     requirements: Consumers should be sufficiently confident that configuration management processes are in place to ensure the integrity of the solution through development, testing and deployment.
@@ -25,4 +27,5 @@ Secure development:
     assuranceApproach: 2answers-type1
     fields:
       - type: boolean
+        filterLabel: Software configuration management
     validationNotAnswered: "This question requires an answer."
