--- a/service/security/supply-chain-security.yml
+++ b/service/security/supply-chain-security.yml
@@ -7,6 +7,7 @@ Supply-chain security:
     assuranceApproach: 2answers-type1
     fields:
       - type: boolean
+        filterLabel: Visibility of data shared with third-party suppliers
     validationNotAnswered: "This question requires an answer."
   "Third-party supplier security requirements":
     requirements: The consumer understands and accepts how the service provider’s procurement processes place security requirements on third party suppliers and delivery partners.
@@ -16,6 +17,7 @@ Supply-chain security:
     assuranceApproach: 2answers-type1
     fields:
       - type: boolean
+        filterLabel: Third-party supplier security requirements
     validationNotAnswered: "This question requires an answer."
   "Third-party supplier risk assessment":
     requirements: The consumer understands and accepts how the service provider manages security risks from third party suppliers and delivery partners.
@@ -25,6 +27,7 @@ Supply-chain security:
     assuranceApproach: 2answers-type1
     fields:
       - type: boolean
+        filterLabel: Third-party supplier risk assessment
     validationNotAnswered: "This question requires an answer."
   "Third-party supplier compliance monitoring":
     requirements: The consumer understands and accepts how the service provider manages the conformance of their suppliers with security requirements.
@@ -34,6 +37,7 @@ Supply-chain security:
     assuranceApproach: 2answers-type1
     fields:
       - type: boolean
+        filterLabel: Third-party supplier compliance monitoring
     validationNotAnswered: "This question requires an answer."
   "Hardware and software verification":
     requirements: The consumer understands and accepts how the service provider verifies that hardware and software used in the service is genuine and has not been tampered with.
@@ -43,4 +47,5 @@ Supply-chain security:
     assuranceApproach: 2answers-type1
     fields:
       - type: boolean
+        filterLabel: Hardware and software verification
     validationNotAnswered: "This question requires an answer."
