--- a/g6/termsAndConditionsDocumentURL.yml
+++ b/g6/termsAndConditionsDocumentURL.yml
@@ -5,14 +5,14 @@ hint: 'Please upload your terms and conditions document. This document will not 
 type: upload
 validations:
   -
-    name: notAnswered
+    name: answer_required
     message: 'This question requires an answer.'
   -
-    name: uploadFail
-    message: 'Your document failed to upload. Please try again.'
-  -
-    name: wrongFormat
+    name: file_is_open_document_format
     message: 'Your document is not in an open format. Please save as an Open Document Format (ODF) or PDF/A (eg .pdf, .odt).'
   -
-    name: tooLarge
+    name: file_is_less_than_5mb
     message: 'Your document exceeds the 5MB limit. Please reduce file size.'
+  -
+    name: file_can_be_saved
+    message: 'Your document failed to upload. Please try again.'
