--- a/g6/sfiaRateCardURL.yml
+++ b/g6/sfiaRateCardURL.yml
@@ -3,6 +3,7 @@ dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
 mockAnswer: 'Rate Card Umbraco 102014.odf'
 hint: 'Please upload your SFIA rate card if you have one. This document will not be indexed by search on the Digital Marketplace. Use an Open Document Format (ODF) or PDF/A (eg .pdf, .odt). (Maximum file size 5MB.)'
 type: upload
+optional: yes
 validations:
   -
     name: file_is_open_document_format
