Add type for service summary

--- a/g6/serviceSummary.yml
+++ b/g6/serviceSummary.yml
@@ -7,3 +7,4 @@ fields:
         maxLengthInWords: 50
 validationNotAnswered: 'This question requires an answer.'
 question: 'Service summary'
+type: textbox_large
