--- a/g6/datacentreTier.yml
+++ b/g6/datacentreTier.yml
@@ -2,42 +2,33 @@ hint: 'Choose one'
 dependsOnLots: 'SaaS, PaaS, IaaS'
 servicePageLabel: 'Datacentre tier'
 assuranceApproach: null
-fields:
+type: radio
+options:
     -
-        type: radio
         label: 'TIA-942 Tier 1'
         filterLabel: 'TIA-942 Tier 1 datacentre'
-        displayedResponse: 'TIA-942 Tier 1'
     -
-        type: radio
         label: 'TIA-942 Tier 2'
         filterLabel: 'TIA-942 Tier 2 datacentre'
     -
-        type: radio
         label: 'TIA-942 Tier 3'
         filterLabel: 'TIA-942 Tier 3 datacentre'
     -
-        type: radio
         label: 'TIA-942 Tier 4'
         filterLabel: 'TIA-942 Tier 4 datacentre'
     -
-        type: radio
         label: 'Uptime Institute Tier 1'
         filterLabel: 'Uptime Institute Tier 1 datacentre'
     -
-        type: radio
         label: 'Uptime Institute Tier 2'
         filterLabel: 'Uptime Institute Tier 2 datacentre'
     -
-        type: radio
         label: 'Uptime Institute Tier 3'
         filterLabel: 'Uptime Institute Tier 3 datacentre'
     -
-        type: radio
         label: 'Uptime Institute Tier 4'
         filterLabel: 'Uptime Institute Tier 4 datacentre'
     -
-        type: radio
         label: 'None of the above'
 validationNotAnswered: 'This question requires an answer.'
 question: 'Datacentre tier'
