--- a/g6/auditInformationProvided.yml
+++ b/g6/auditInformationProvided.yml
@@ -3,16 +3,14 @@ filters: 'Consumers are aware of the audit information that will be provided to 
 hint: 'Do you provide audit information to consumers? Choose 1.'
 dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 2answers-type1
-fields:
+type: radios
+options:
     -
-        type: radio
         label: None
     -
-        type: radio
         label: 'Data made available'
         filterLabel: 'Data made available'
     -
-        type: radio
         label: 'Data made available by negotiation'
         filterLabel: 'Data made available by negotiation'
 validationNotAnswered: 'This question requires an answer.'
