--- a/g6/dataProtectionBetweenServices.yml
+++ b/g6/dataProtectionBetweenServices.yml
@@ -3,29 +3,24 @@ filters: 'Data in transit is protected between the service and other services (e
 hint: 'Choose 1'
 dependsOnLots: 'PaaS, IaaS'
 assuranceApproach: 4answers-type1
-fields:
+type: radios
+options:
     -
-        type: radio
         label: 'Encrypted PSN service'
         filterLabel: 'Encrypted PSN service'
     -
-        type: radio
         label: 'PSN service'
         filterLabel: 'PSN service'
     -
-        type: radio
         label: 'CPA Foundation VPN Gateway'
         filterLabel: 'CPA Foundation VPN Gateway'
     -
-        type: radio
         label: 'VPN using TLS, version 1.2 or later'
         filterLabel: 'VPN using TLS, version 1.2 or later'
     -
-        type: radio
         label: 'VPN using legacy SSL or TLS'
         filterLabel: 'VPN using legacy SSL or TLS'
     -
-        type: radio
         label: 'No encryption'
 validationNotAnswered: 'This question requires an answer.'
 question: 'Data protection between services'
