--- a/g6/datacentreLocations.yml
+++ b/g6/datacentreLocations.yml
@@ -3,25 +3,21 @@ filters: 'The geographic location(s) where consumer data is stored, processed or
 hint: 'Where are the service provider''s datacentres located? Choose all that apply.'
 dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 3answers-type1
-fields:
+type: checkboxes
+options:
     -
-        type: checkbox
         label: UK
         filterLabel: UK
     -
-        type: checkbox
         label: EU
         filterLabel: EU
     -
-        type: checkbox
         label: 'USA - Safe Harbor'
         filterLabel: 'USA - Safe Harbor'
     -
-        type: checkbox
         label: 'Other countries with data protection treaties'
         filterLabel: 'Other countries with data protection treaties'
     -
-        type: checkbox
         label: 'Rest of world'
 validationNotAnswered: 'This question requires an answer.'
 question: 'Datacentre location'
