--- a/g6/identityAuthenticationControls.yml
+++ b/g6/identityAuthenticationControls.yml
@@ -3,33 +3,27 @@ filters: 'Consumers should have sufficient confidence that identity and authenti
 hint: 'How do your identity and authentication controls ensure that users are authorised to access specific interfaces? Choose all that apply.'
 dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 3answers-type3
-fields:
+type: checkboxes
+options:
     -
-        type: checkbox
         label: 'Username and two-factor authentication'
         filterLabel: 'Username and two-factor authentication'
     -
-        type: checkbox
         label: 'Username and TLS client certificate'
         filterLabel: 'Username and TLS client certificate'
     -
-        type: checkbox
         label: 'Authentication federation'
         filterLabel: 'Authentication federation'
     -
-        type: checkbox
         label: 'Limited access over dedicated link, enterprise or community network'
         filterLabel: 'Limited access over dedicated link, enterprise or community network'
     -
-        type: checkbox
         label: 'Username and password'
         filterLabel: 'Username and password'
     -
-        type: checkbox
         label: 'Username and strong password/passphrase enforcement'
         filterLabel: 'Username and strong password/passphrase enforcement'
     -
-        type: checkbox
         label: 'Other mechanism'
 validationNotAnswered: 'This question requires an answer.'
 question: 'Identity and authentication controls'
