--- a/g6/interconnectionMethods.yml
+++ b/g6/interconnectionMethods.yml
@@ -3,21 +3,18 @@ filters: 'The consumer understands what physical and logical interfaces their in
 hint: 'What method of interconnection to the service do you provide? Choose all that apply.'
 dependsOnLots: 'PaaS, IaaS'
 assuranceApproach: 2answers-type1
-fields:
+type: checkboxes
+options:
     -
-        type: checkbox
         label: 'Encrypted PSN service'
         filterLabel: 'Encrypted PSN service'
     -
-        type: checkbox
         label: 'PSN service'
         filterLabel: 'PSN service'
     -
-        type: checkbox
         label: 'Private WAN'
         filterLabel: 'Private WAN'
     -
-        type: checkbox
         label: Internet
         filterLabel: Internet
 validationNotAnswered: 'This question requires an answer.'
