--- a/g6/legalJurisdiction.yml
+++ b/g6/legalJurisdiction.yml
@@ -3,25 +3,21 @@ filters: 'The legal jurisdiction(s) in which the service provider operates'
 hint: 'Choose 1'
 dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 3answers-type1
-fields:
+type: radios
+options:
     -
-        type: radio
         label: UK
         filterLabel: UK
     -
-        type: radio
         label: EU
         filterLabel: EU
     -
-        type: radio
         label: 'USA - Safe Harbor'
         filterLabel: 'USA - Safe Harbor'
     -
-        type: radio
         label: 'Other countries with data protection treaties'
         filterLabel: 'Other countries with data protection treaties'
     -
-        type: radio
         label: 'Rest of world'
 validationNotAnswered: 'This question requires an answer.'
 question: 'Legal jurisdiction of service provider'
