--- a/g6/personnelSecurityChecks.yml
+++ b/g6/personnelSecurityChecks.yml
@@ -3,21 +3,18 @@ filters: 'Consumers should be content with the level of security screening condu
 hint: 'What kind of personnel security do you apply to staff who have access to the service? Choose all that apply.'
 dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 2answers-type1
-fields:
+type: checkboxes
+options:
     -
-        type: checkbox
         label: 'Security clearance national vetting (SC)'
         filterLabel: 'Security clearance national vetting (SC)'
     -
-        type: checkbox
         label: 'Baseline personnel security standard (BPSS)'
         filterLabel: 'Baseline personnel security standard (BPSS)'
     -
-        type: checkbox
         label: 'Background checks in accordance with BS7858:2012'
         filterLabel: 'Background checks in accordance with BS7858:2012'
     -
-        type: checkbox
         label: 'Employment checks'
         filterLabel: 'Employment checks'
 validationNotAnswered: 'This question requires an answer.'
