--- a/g6/serviceManagementModel.yml
+++ b/g6/serviceManagementModel.yml
@@ -3,25 +3,21 @@ filters: 'Consumers have sufficient confidence that the technical approach the s
 hint: 'Which technical approach do you use for your service management? Choose 1.'
 dependsOnLots: 'SaaS, PaaS, IaaS'
 assuranceApproach: 2answers-type1
-fields:
+type: radios
+options:
     -
-        type: radio
         label: 'Dedicated devices on a segregated network'
         filterLabel: 'Dedicated devices on a segregated network'
     -
-        type: radio
         label: 'Dedicated devices for community service management'
         filterLabel: 'Dedicated devices for community service management'
     -
-        type: radio
         label: 'Dedicated devices for multiple community service management'
         filterLabel: 'Dedicated devices for multiple community service management'
     -
-        type: radio
         label: 'Service management via bastion hosts'
         filterLabel: 'Service management via bastion hosts'
     -
-        type: radio
         label: 'Direct service management'
         filterLabel: 'Direct service management'
 validationNotAnswered: 'This question requires an answer.'
