--- a/g6/serviceTypes.yml
+++ b/g6/serviceTypes.yml
@@ -1,25 +1,21 @@
 dependsOnLots: SCS
 hint: 'You can choose multiple categories'
 mockAnswer: 'Content management system'
-fields:
+type: checkboxes
+options:
     -
-        type: checkbox
         label: Implementation
         filterLabel: Implementation
     -
-        type: checkbox
         label: 'Ongoing support'
         filterLabel: 'Ongoing support'
     -
-        type: checkbox
         label: Planning
         filterLabel: Planning
     -
-        type: checkbox
         label: Testing
         filterLabel: Testing
     -
-        type: checkbox
         label: Training
         filterLabel: Training
 validationNotAnswered: 'This question requires an answer.'
