--- a/g6/supportTypes.yml
+++ b/g6/supportTypes.yml
@@ -1,24 +1,20 @@
 dependsOnLots: 'SaaS, PaaS, IaaS, SCS'
 hint: 'Choose all that apply.'
-fields:
+type: checkboxes
+options:
     -
-        type: checkbox
         label: 'Service desk'
         filterLabel: 'Service desk'
     -
-        type: checkbox
         label: Email
         filterLabel: Email
     -
-        type: checkbox
         label: Phone
         filterLabel: Phone
     -
-        type: checkbox
         label: 'Live chat'
         filterLabel: 'Live chat'
     -
-        type: checkbox
         label: Onsite
         filterLabel: Onsite
 validationNotAnswered: 'This question requires an answer.'
